// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders correctly 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly labeled 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-nrh63m {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-nrh63m[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-nrh63m[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-nrh63m e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j e1x48wse3"
      >
        OFF
      </span>
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="true"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-nrh63m {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-nrh63m[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-nrh63m[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="true"
      class="cache-nrh63m e1x48wse2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j e1x48wse3"
      >
        ON
      </span>
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-d8hivk {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  width: 28px;
  text-align: right;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="true"
    class="cache-759u60 e1x48wse0"
  >
    <span
      class="cache-d8hivk e1x48wse3"
    >
      ON
    </span>
    <span
      aria-checked="true"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when checked and labeled on right 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

.cache-ltax9v {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 10px;
  width: 28px;
}

<label
    aria-checked="true"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="true"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
    <span
      class="cache-ltax9v e1x48wse3"
    >
      ON
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-rtgc1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.cache-hcqs5q {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #dce1eb;
  border: none;
  border-radius: 34px;
  cursor: not-allowed;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 0.5;
}

.cache-hcqs5q[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-hcqs5q[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-hcqs5q[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-hcqs5q[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-rtgc1 e1x48wse0"
    disabled=""
  >
    <span
      aria-checked="false"
      class="cache-hcqs5q e1x48wse2"
      disabled=""
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        class="cache-cujed6 e1x48wse1"
        disabled=""
        id="test"
        name="test"
        style="pointer-events: none;"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom inside labels 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-nrh63m {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-nrh63m[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-nrh63m[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-nrh63m e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j e1x48wse3"
      >
        No
      </span>
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom label render on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1ml3wuh {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  text-align: right;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      class="cache-1ml3wuh e1x48wse3"
    >
      <span
        style="font-weight: bold;"
      >
        Custom label rendered
      </span>
    </span>
    <span
      aria-checked="false"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

.cache-n4kltw {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: 10px;
  width: 88px;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
    <span
      class="cache-n4kltw e1x48wse3"
    >
      Unchecked
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with custom width 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1pki1st {
  overflow: hidden;
  outline: none;
  width: 120px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-1pki1st[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-1pki1st[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              108px
            ) translateX(-100%);
  -moz-transform: translateX(
              108px
            ) translateX(-100%);
  -ms-transform: translateX(
              108px
            ) translateX(-100%);
  transform: translateX(
              108px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-1pki1st[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-1pki1st[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-1pki1st e1x48wse2"
      width="120"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with label inside 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-nrh63m {
  overflow: hidden;
  outline: none;
  width: 70px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-nrh63m[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              58px
            ) translateX(-100%);
  -moz-transform: translateX(
              58px
            ) translateX(-100%);
  -ms-transform: translateX(
              58px
            ) translateX(-100%);
  transform: translateX(
              58px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-nrh63m[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-nrh63m[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1a5an6j {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-weight: 700;
  font-size: 16px;
  position: absolute;
  line-height: 20px;
  width: calc(100% - 20px);
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-nrh63m e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1a5an6j e1x48wse3"
      >
        OFF
      </span>
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-d8hivk {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-right: 10px;
  width: 28px;
  text-align: right;
}

.cache-16g6jvd {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-16g6jvd[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-16g6jvd[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-16g6jvd[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      class="cache-d8hivk e1x48wse3"
    >
      OFF
    </span>
    <span
      aria-checked="false"
      class="cache-16g6jvd e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1v93515 {
  overflow: hidden;
  outline: none;
  width: 40px;
  height: 24px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-1v93515[aria-checked='true'] {
  background-color: #4f0599;
}

.cache-1v93515[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              28px
            ) translateX(-100%);
  -moz-transform: translateX(
              28px
            ) translateX(-100%);
  -ms-transform: translateX(
              28px
            ) translateX(-100%);
  transform: translateX(
              28px
            ) translateX(-100%);
  background-color: #f6f5f7;
}

.cache-1v93515[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-1v93515[aria-checked='true']>.e1x48wse3 {
  color: #f6f5f7;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-110sibj {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 12px;
  height: 12px;
  background-color: #f6f5f7;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-1v93515 e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-110sibj e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`Switch renders correctly with non default variant 1`] = `
<DocumentFragment>
  .cache-759u60 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.cache-1hia2a8 {
  overflow: hidden;
  outline: none;
  width: 72px;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #b2b6c3;
  border: none;
  border-radius: 34px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 0 6px;
  opacity: 1;
}

.cache-1hia2a8[aria-checked='true'] {
  background-color: #cdfcf1;
}

.cache-1hia2a8[aria-checked='true']>.e1x48wse4 {
  -webkit-transform: translateX(
              60px
            ) translateX(-100%);
  -moz-transform: translateX(
              60px
            ) translateX(-100%);
  -ms-transform: translateX(
              60px
            ) translateX(-100%);
  transform: translateX(
              60px
            ) translateX(-100%);
  background-color: #45d6b5;
}

.cache-1hia2a8[aria-checked='false']>.e1x48wse3 {
  color: #4a4f62;
  right: 0;
}

.cache-1hia2a8[aria-checked='true']>.e1x48wse3 {
  color: #45d6b5;
  left: 0;
}

.cache-cujed6 {
  position: absolute;
  opacity: 0.01;
}

.cache-1be48ol {
  display: block;
  position: relative;
  border-radius: 34px;
  pointer-events: none;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  width: 20px;
  height: 20px;
  background-color: #4a4f62;
}

<label
    aria-checked="false"
    class="cache-759u60 e1x48wse0"
  >
    <span
      aria-checked="false"
      class="cache-1hia2a8 e1x48wse2"
    >
      <input
        aria-checked="false"
        class="cache-cujed6 e1x48wse1"
        id="test"
        name="test"
        type="checkbox"
      />
      <span
        class="cache-1be48ol e1x48wse4"
      />
    </span>
  </label>
</DocumentFragment>
`;
